# modular-rag

./: .env.example  .gitignore  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
docker/: Dockerfile.fastapi  Dockerfile.nginx  nginx.conf
docker/fastapi/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
fastapi/: pyproject.toml
fastapi/app/: main.py
fastapi/app/chat_message/: chat_message_crud.py  chat_message_model.py  chat_message_router.py  chat_message_schema.py
fastapi/app/chat_session/: chat_session_crud.py  chat_session_model.py  chat_session_router.py  chat_session_schema.py
fastapi/app/configs/: mysql.py  redis.py  settings.py
fastapi/app/db/: model_base.py  session.py
fastapi/app/langgraph/vectorstores/: base.py
fastapi/app/langgraph/web_search/: base.py  duckduckgo_search.py  tavily_search.py
fastapi/app/modules/llm_models/: README.md  base.py  llm_model_registry.py  openai.py
fastapi/app/services/kakao/: chat_router.py
fastapi/app/services/multiagent/: node.py
fastapi/app/templates/: login.html
fastapi/app/user/: auth.py  security.py  token_schema.py  user_crud.py  user_model.py  user_router.py  user_schema.py
fastapi/test/: llm_model_test.ipynb
teddynote/: 01-Agentic-RAG-Relevance-Check.ipynb  01-Layout-Parser.ipynb  02-Agentic-RAG-Retrived-Context.ipynb  02-Document-Graph-Parser.ipynb  03-Agentic-RAG-Retrived-Context-Relevance-Combine.ipynb  03-Document-Graph-Parser.ipynb  04-Document-Graph-Parser-Graph.ipynb  05-Document-Graph-Parser-RAG-Example.ipynb
