[tool.poetry]
name = "modular-rag"
version = "0.1.0"
description = "A modular RAG system built with FastAPI and LangChain"
authors = ["syshin0116 <syshin0116@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/syshin0116/modular-rag"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"  # FastAPI 최신 버전
langchain = "^0.0.201"  # LangChain 패키지
uvicorn = "^0.21.0"  # Uvicorn 서버
pydantic = "^1.10.5"  # FastAPI와 호환되는 데이터 검증용 라이브러리
requests = "^2.28.0"  # HTTP 요청을 처리하는 라이브러리
redis = "^4.5.1"  # Redis와의 통신을 위한 패키지 (필요 시)

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"  # 테스트를 위한 패키지
black = "^22.3.0"  # 코드 포맷터
isort = "^5.10.1"  # import 문 정리 도구

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
